jj: update aliases

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -30,6 +30,11 @@ diff-editor = ":builtin"  # suppress hint about this config option
 
 [aliases]
 b  = ["bookmark"]
+bc = ["bookmark", "create"]
+bm = ["bookmark", "move"]
+bd = ["bookmark", "delete"]
+bl = ["bookmark", "list"]
+bla= ["bookmark", "list", "--all-remotes"]
 c  = ["commit"]
 ci = ["commit", "--interactive"]
 cm = ["util", "exec", "--", "bash", "-c", """set -eo pipefail ; echo "$@" | jj describe --stdin ; jj new""", ""]
@@ -38,8 +43,8 @@ dv = ["--config=templates.draft_commit_description=commit_description_verbose", 
 dm = ["util", "exec", "--", "bash", "-c", """set -eo pipefail ; echo "$@" | jj describe --stdin""", ""]
 e  = ["edit"]
 f  = ["git", "fetch", "--all-remotes"]
-l  = ["log", "--template", "custom_log_oneline", "--revisions", "ancestors(@)"]
-g  = ["log", "--template", "custom_log_oneline", "--revisions", "all()"]
+l  = ["log", "--revisions", "ancestors(@)"]
+g  = ["log", "--revisions", "all()"]
 p  = ["git", "push"]
 pa = ["git", "push", "--all"]
 pt = ["git", "push", "--tracked"]
@@ -47,6 +52,7 @@ pc = ["git", "push", "--change"]
 pb = ["git", "push", "--bookmark"]
 pn = ["git", "push", "--named"]
 pd = ["git", "push", "--deleted"]
+pad= ["git", "push", "--all", "--deleted"]
 r  = ["rebase"]
 rd = ["rebase", "--destination"]
 s  = ["show"]
