--- a/.chezmoiscripts/1_install/run_onchange_after_3_media_codecs.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_media_codecs.sh.tmpl
@@ -5,13 +5,8 @@ set -eo pipefail
 
 echo "Installing media codecs..."
 
-# sudo dnf groupupdate -y multimedia --setop="install_weak_deps=False" --exclude=PackageKit-gstreamer-plugin
-sudo dnf install -y gstreamer1-plugins-{good-\*,base} gstreamer1-plugin-openh264 gstreamer1-libav --exclude=gstreamer1-plugins-bad-free-devel
-# The bad-* plugins are borked packages for some reason. TODO Check at some point if that's still true.
-# sudo dnf install -y gstreamer1-plugins-{bad-\*,good-\*,base} gstreamer1-plugin-openh264 gstreamer1-libav --exclude=gstreamer1-plugins-bad-free-devel
-sudo dnf install -y lame\* --exclude=lame-devel
-
-sudo dnf update @multimedia --allowerasing -y
+sudo dnf swap ffmpeg-free ffmpeg --allowerasing -y
+sudo dnf update @multimedia --setopt="install_weak_deps=False" --exclude=PackageKit-gstreamer-plugin -y
 
 # https://docs.fedoraproject.org/en-US/quick-docs/openh264/
 sudo dnf install -y gstreamer1-plugin-openh264 mozilla-openh264
