--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -56,6 +56,7 @@ pad= ["git", "push", "--all", "--deleted"]
 r  = ["rebase"]
 rd = ["rebase", "--destination"]
 s  = ["show"]
+q  = ["squash"]
 
 tug = ["bookmark", "move", "--from", "heads(::@- & bookmarks())", "--to", "@-"]
 init = ["git", "init", "--colocate"]
