--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -84,7 +84,7 @@ jj commit "$@"
 
 change_id="$(jj --ignore-working-copy log --revisions @- --no-graph --template change_id)"
 
-jj --ignore-working-copy rebase --revisions "$change_id" --insert-after "$target_bookmark"
+jj --ignore-working-copy rebase --revisions "$change_id" --insert-before "all:$target_bookmark+ & mutable()"
 jj --ignore-working-copy bookmark move "$target_bookmark" --to "$change_id"
 """, "jj cob"]
 
