jj: add alias for squash --to

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -57,6 +57,7 @@ r  = ["rebase"]
 rd = ["rebase", "--destination"]
 s  = ["show"]
 q  = ["squash"]
+qt = ["squash", "--to"]
 
 tug = ["bookmark", "move", "--from", "heads(::@- & bookmarks())", "--to", "@-"]
 init = ["git", "init", "--colocate"]
