jj: fix cob script
The missing --insert-after would cause a mega-merge commit setup to
break. Parallel branches would also become parents of the new commit.

Also: `all:` is not needed anymore, it's allowed by default since
jj v0.32.

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -85,7 +85,11 @@ jj commit "$@"
 
 change_id="$(jj --ignore-working-copy log --revisions @- --no-graph --template change_id)"
 
-jj --ignore-working-copy rebase --revisions "$change_id" --insert-before "all:$target_bookmark+ & mutable()"
+jj --ignore-working-copy rebase \
+    --revisions "$change_id" \
+    --insert-after "$target_bookmark" \
+    --insert-before "$target_bookmark+ & mutable()"
+
 jj --ignore-working-copy bookmark move "$target_bookmark" --to "$change_id"
 """, "jj cob"]
 
