--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -30,6 +30,7 @@ packages=(
     eza
     xh
     usage-cli # used by mise
+    mergiraf
 )
 cargo binstall --no-confirm --log-level warn "${packages[@]}"
 
