jj: allow cob alias to commit onto "anonymous" branches
Now you chan specify for example a change-id as the branch to commit
onto. This is nice if you started some parallel work in your mega-merge,
but didn't push it yet with `jj git push --change` or similar.

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -90,7 +90,11 @@ jj --ignore-working-copy rebase \
     --insert-after "$target_bookmark" \
     --insert-before "$target_bookmark+ & mutable()"
 
-jj --ignore-working-copy bookmark move "$target_bookmark" --to "$change_id"
+if test -n "$(jj bookmark list $target_bookmark)"
+then
+    jj --ignore-working-copy bookmark move "$target_bookmark" --to "$change_id"
+    # else: committing onto "anonymous" branch, e.g. some change-id without bookmark
+fi
 """, "jj cob"] # commit onto branch
 emm = ["util", "exec", "--", "bash", "-c", """
 #!/usr/bin/env bash
