clone hpmm/github-actions repo

--- a/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
+++ b/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
@@ -39,6 +39,7 @@ repos=(
 # {{- if eq .org "zhaw" }}
     zhaw:hpmm/weekly
     zhaw:hpmm/pass
+    zhaw:hpmm/github-actions
     zhaw:hpmm/mc2-labs
     zhaw:InES/werkzeugraum
 # {{- end }}
