--- a/dot_config/niri/config.kdl.tmpl
+++ b/dot_config/niri/config.kdl.tmpl
@@ -10,6 +10,7 @@
 spawn-at-startup "/usr/libexec/polkit-mate-authentication-agent-1" // package: mate-polkit
 spawn-at-startup "swaybg" "--mode=fill" "--image=/usr/share/backgrounds/f34/default/f34.png"
 spawn-at-startup "swayidle" "-w" // config in swayidle/config
+spawn-at-startup "nm-applet"
 environment {
     DISPLAY ":0"
 }
