fix setting of SSH_AUTH_SOCK variable
Firstly, testing if it exists doesn't work (anymore?), because there is
some "keyring" agent running already. Secondly, I had to add the new
tests in the git cloning script as well, because when that is run at
first init time, the fish config is not loaded into the environment yet.

--- a/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
+++ b/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
@@ -4,6 +4,10 @@ set -eo pipefail
 
 # {{ template "skipOnServer" . }}
 
+if test -e ~/.1password/agent.sock ; then
+    export SSH_AUTH_SOCK=~/.1password/agent.sock
+fi
+
 export GIT_SSH_COMMAND="ssh -o StrictHostKeyChecking=accept-new"
 
 echo "Cloning git repos..."
