--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -33,6 +33,7 @@ packages=(
     xcb-util-cursor-devel # build-dep of xwayland-satellite
     wtype # simulate wayland input, used by fuzzel_emoji.sh
     nm-applet
+    clang # build-dependency of xwayland-satellite
 )
 installed="$(dnf list --installed)"
 for package in "${packages[@]}"; do
