install swayidle and swaybg
I was already using them in my config, but I've only had them installed
manually I guess.

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -25,6 +25,7 @@ packages=(
     mate-polkit # authentication agent
     fuzzel
     waybar
+    swayidle swaybg
     wlsunset
     blueman # bluetooth GUI
     pavucontrol # audio GUI
