jj: remove underline from diff tokens

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -166,3 +166,4 @@ concat(
 "tags" = { fg = "magenta", underline = true }
 "working_copy tag" = { fg = "bright magenta", underline = true }
 "working_copy tags" = { fg = "bright magenta", underline = true }
+"diff token" = { underline = false }
