jj: suppress warning regarding config schema

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -1,4 +1,5 @@
 #:schema https://jj-vcs.github.io/jj/latest/config-schema.json
+#:tombi schema.strict = false # --scope is not part of the schema as of August 2025
 # chezmoi:template:left-delimiter="# {{"
 
 [user]
