jj: add clean alias

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -68,6 +68,7 @@ track-mine = ["bookmark", "track", "regex:(remo|senekor|senk)[/-].*@.*"]
 track-all = ["bookmark", "track", "glob:*@*"] # for personal repos where I don't use the prefix
 
 # [scripts]
+clean = ["util", "exec", "--", "git", "clean", "-e", ".jj", "-xdf", ":/"]
 clone = ["util", "exec", "--", "# {{ .chezmoi.homeDir }}/.config/jj/scripts/clone.nu"]
 tnp = ["util", "exec", "--", "bash", "-c", "set -e ; jj tug ; jj git push --revisions @-"] # tug'n'push
 cob = ["util", "exec", "--", "bash", "-c", """
