zhaw: add fitonduty sftp server bookmark

--- a/dot_config/gtk-3.0/bookmarks.tmpl
+++ b/dot_config/gtk-3.0/bookmarks.tmpl
@@ -6,4 +6,5 @@ file://{{ .chezmoi.homeDir }}/downloads
 file://{{ .chezmoi.homeDir }}/repos
 {{ if eq .org "zhaw" -}}
 smb://160.85.184.97/staff/senk zhaw
+sftp://baspo-zhawcollector1@fod.dataio.ch:22991/baspo-zhawcollector1 fitonduty
 {{ end -}}
