codium: switch back to rpm package
too much annoying isolation with flatpak

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -9,6 +9,7 @@ packages=(
     wl-clipboard
     alacritty
     f34-backgrounds-gnome
+    codium
     openscad clang-tools-extra
     meld # merge tool for jj
     # yubikey
