--- a/.chezmoiscripts/1_install/run_onchange_after_3_flatpak.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_flatpak.sh.tmpl
@@ -11,9 +11,10 @@ packages=(
     org.chromium.Chromium
     org.signal.Signal
     com.prusa3d.PrusaSlicer
-    com.vscodium.codium
 )
-
 flatpak install --noninteractive flathub "${packages[@]}"
+
+to_remove=(com.vscodium.codium)
+flatpak uninstall --noninteractive "${to_remove[@]}" || true
 
 flatpak override --user --socket=wayland md.obsidian.Obsidian
