make sure notification daemon is installed
It doesn't need to be started explicitly, since it will be started by
DBus activation when needed.

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -24,6 +24,7 @@ packages=(
     # niri
     niri
     mate-polkit # authentication agent
+    mako # notification daemon
     fuzzel
     waybar
     swayidle swaybg
