jj: colocate repos by default

--- a/.chezmoiscripts/3_configure/run_onchange_after_setup_dotfiles_repo.sh.tmpl
+++ b/.chezmoiscripts/3_configure/run_onchange_after_setup_dotfiles_repo.sh.tmpl
@@ -3,6 +3,6 @@ set -euo pipefail
 
 cd "{{ .chezmoi.sourceDir }}"
 if ! test -d .jj ; then
-    jj git init --colocate
+    jj git init
     jj bookmark track main@origin
 fi
