clone resume repo

--- a/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
+++ b/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
@@ -14,6 +14,7 @@ echo "Cloning git repos..."
 
 repos=(
     buenzli:remo/notes.wiki
+    buenzli:remo/resume
     buenzli:remo/container-test
 
     github:senekor/rust-workshop
