jj: add colored background to diff output
I removed the underline at some point, because it made stuff unreadable
for me. But then any whitespace changes are invisible. This background
color is not particularly beatiful, but it keeps the text readable and
shows whitespace changes.

--- a/dot_config/jj/config.toml.tmpl
+++ b/dot_config/jj/config.toml.tmpl
@@ -168,3 +168,5 @@ concat(
 "working_copy tag" = { fg = "bright magenta", underline = true }
 "working_copy tags" = { fg = "bright magenta", underline = true }
 "diff token" = { underline = false }
+"diff added token" = { bg = "#204020", fg = "#bbddbb" }
+"diff removed token" = { bg = "#402020", fg = "#ddbbbb" }
