clone moved rust wbk repos

--- a/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
+++ b/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
@@ -17,7 +17,6 @@ repos=(
     buenzli:remo/resume
     buenzli:remo/container-test
 
-    github:senekor/rust-workshop
     github:senekor/three-d-models
     github:senekor/flirt
     github:jj-for-everyone/jj-for-everyone.github.io
@@ -46,6 +45,7 @@ repos=(
     zhaw:hpmm/pass
     zhaw:hpmm/github-actions
     zhaw:hpmm/mc2-labs
+    zhaw:senk/rust-wbk github:senekor/rust-exercises
     zhaw:InES/werkzeugraum
 # {{- end }}
 )
