install QR code app (scan and generate)

--- a/.chezmoiscripts/1_install/run_onchange_after_3_flatpak.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_flatpak.sh.tmpl
@@ -11,6 +11,7 @@ packages=(
     org.chromium.Chromium
     org.signal.Signal
     com.prusa3d.PrusaSlicer
+    com.belmoussaoui.Decoder
 )
 flatpak install --noninteractive flathub "${packages[@]}"
 
