install pinta for image editing

--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -20,6 +20,8 @@ packages=(
     adw-gtk3-theme
     # TUI email client, needs 1Password CLI for auth
     aerc
+    # image editing
+    pinta
 
     # niri
     niri
