clone embedded discovery repo

--- a/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
+++ b/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
@@ -16,6 +16,7 @@ repos=(
     buenzli:remo/notes.wiki
     buenzli:remo/resume
     buenzli:remo/container-test
+    buenzli:remo/rust-embedded-discovery
 
     github:senekor/three-d-models
     github:senekor/flirt
