update rust wbk repos

--- a/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
+++ b/.chezmoiscripts/4_git_repos/run_onchange_after_clone.sh.tmpl
@@ -46,7 +46,7 @@ repos=(
     zhaw:hpmm/pass
     zhaw:hpmm/github-actions
     zhaw:hpmm/mc2-labs
-    zhaw:senk/rust-wbk github:senekor/rust-exercises
+    zhaw:rust-wbk/material zhaw:rust-wbk/exercises
     zhaw:InES/werkzeugraum
 # {{- end }}
 )
