--- a/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_3_dnf_gui_stuff.sh.tmpl
@@ -38,6 +38,7 @@ packages=(
     xcb-util-cursor-devel # build-dep of xwayland-satellite
     wtype # simulate wayland input, used by fuzzel_emoji.sh
     nm-applet
+    wl-mirror # for presentations, see wl-mirror.desktop
 )
 installed="$(dnf list --installed)"
 for package in "${packages[@]}"; do
