--- a/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
+++ b/.chezmoiscripts/1_install/run_onchange_after_4_bin.sh.tmpl
@@ -31,6 +31,7 @@ packages=(
     xh
     usage-cli # used by mise
     mergiraf
+    typos-cli
 )
 cargo binstall --no-confirm --log-level warn "${packages[@]}"
 
