niri: add keybind to dismiss notification

--- a/dot_config/niri/config.kdl.tmpl
+++ b/dot_config/niri/config.kdl.tmpl
@@ -283,6 +283,7 @@ binds {
     Mod+Ctrl+E { spawn "alacritty"; } // in case zellij is acting up
     Mod+I { spawn "gtk-launch" "ide.desktop"; }
     Mod+O { spawn "fish" "-c" "~/.local/bin2/rotate_monitor.sh"; }
+    Mod+K { spawn "makoctl" "dismiss"; }
 
     // shows a list of important hotkeys.
     Mod+Slash { show-hotkey-overlay; }
