niri: always center single visible column

--- a/dot_config/niri/config.kdl.tmpl
+++ b/dot_config/niri/config.kdl.tmpl
@@ -111,6 +111,8 @@ output "BOE 0x095F Unknown" {
 // Find more information on the wiki:
 // https://github.com/YaLTeR/niri/wiki/Configuration:-Layout
 layout {
+    always-center-single-column
+
     // Set gaps around windows in logical pixels.
     gaps 0
 
